<resources>

    <!-- Textos de la aplicación -->
    <string name="app_name">Taskjects</string>

    <string name="ok">De acuerdo</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="plusEmpleado">+Empleado</string>
    <string name="verPerfil">Ver perfil</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="salir">Salir</string>

    <string name="empleado">Empleado</string>
    <string name="empresa">Empresa</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="fechaInicio">Fecha de inicio</string>
    <string name="jefeProyecto">Jefe de proyecto</string>
    <string name="crearProyecto">Crear proyecto</string>
    <string name="modifProyecto">Modificar proyecto</string>
    <string name="modifPerfil">Modificar perfil</string>

    <string name="usuario">Usuario</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="recuperar_contrasenia">Recuperar contraseña</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrate">Regístrate</string>
    <string name="registrarse">Registrarse</string>

    <string name="categoria">Categoría</string>

    <string name="emailEmpresa">Email de empresa</string>
    <string name="cifEmpresa">CIF de la empresa</string>
    <string name="nombreEmpresa">Nombre de empresa</string>
    <string name="direccionEmpresa">Dirección de empresa</string>

    <string name="nifEmpleado">NIF</string>
    <string name="nombreEmpleado">Nombre</string>
    <string name="apellidosEmpleado">Apellidos</string>
    <string name="emailEmpleado">Email</string>

    <string name="noHayProyectos">No hay proyectos</string>
    <string name="nombreProyecto">Nombre del proyecto</string>
    <string name="descripcionProyecto">Descripción del proyecto</string>
    <string name="agregar">Agregar</string>
    <string name="volver">Volver</string>
    <string name="editar">Editar</string>
    <string name="aniadirProyecto">Añadir proyecto</string>
    <string name="creacionProyectoCorrecta">El proyecto se ha creado correctamente</string>
    <string name="modifProyectoCorrecta">El proyecto se ha modificado correctamente</string>
    <string name="modifPerfilCorrecta">El perfil se ha modificado correctamente</string>

    <string name="confirmSalidaCreacionProyecto">¿Desea cancelar la creación del proyecto? Los cambios se perderán</string>
    <string name="confirmSalidaCreacionTarea">¿Desea cancelar la creación de la tarea? Los cambios se perderán</string>
    <string name="confirmSalidaModifProyecto">¿Desea cancelar la modificación del proyecto? Los cambios se perderán</string>
    <string name="confirmSalidaModifPerfil">¿Desea cancelar la modificación del perfil? Los cambios se perderán</string>
    <string name="confirmSalidaRegistroEmpleado">¿Desea cancelar el registro de empleado? Los cambios se perderán</string>
    <string name="confirmSalidaRegistroEmpresa">¿Desea cancelar el registro de la empresa? Los cambios se perderán</string>
    <string name="confirmCerrarSesion">¿Desea cerrar la sesión?</string>
    <string name="confirmSalidaAplicacion">¿Desea salir de la aplicación?</string>

    <string name="asignarEmpleados">Asignación empleados</string>
    <string name="registroEmpleado">Registro empleado</string>
    <string name="registroEmpresa">Registro empresa</string>
    <string name="modificarProyecto">Modificar proyecto</string>

    <string name="perfil">Perfil</string>
    <string name="creadoEl">Creado el</string>
    <string name="ultimoLoginEl">Último login el</string>

    <string name="crearTarea">Crear tarea</string>
    <string name="tarea">Tarea</string>
    <string name="creacionTareaCorrecta">La tarea se ha creado correctamente</string>
    <string name="sinAsignar">Sin asignar</string>

    <string name="modifTareaCorrecta">Se ha modificado la tarea correctamente</string>

    <!-- FIN Textos de la aplicación -->

    <!-- Errores de aplicación -->
    <string name="error">Error!</string>
    <string name="faltaCif">Informe el CIF</string>
    <string name="cifErroneo">CIF erróneo</string>
    <string name="cifYaExiste">El CIF informado ya existe</string>
    <string name="cifNoExiste">El CIF informado no existe</string>

    <string name="faltaNif">Informe el NIF</string>
    <string name="nifErroneo">NIF erróneo</string>
    <string name="nifYaExiste">El NIF informado ya existe</string>
    <string name="faltaDireccion">Informe de la dirección</string>

    <string name="faltaNombreEmpresa">Informe el nombre de empresa</string>
    <string name="faltaNombre">Informe su nombre</string>

    <string name="faltaApellidos">Informe su/s apellido/s</string>

    <string name="faltaEmail">Informe su email</string>
    <string name="emailErroneo">Email erróneo</string>
    <string name="emailYaExiste">El email ya está registrado</string>
    <string name="emailNoExiste">El email no está registrado</string>

    <string name="faltaPassword">Informe la contraseña de acceso</string>
    <string name="passwordErroneo">"Contraseña incorrecta. Teclee entre 6 y 24 caracteres.</string>

    <string name="faltaCategoria">Seleccione la categoría profesional</string>

    <string name="datosLoginEmpresaIncorrectos">Email o contraseña incorrecta</string>
    <string name="compruebeDatos">Compruebe los datos introducidos</string>

    <string name="registroCuentaFallido">Registro de cuenta fallido</string>
    <string name="registroEmpresaFallido">Registro de empresa fallido</string>
    <string name="registroEmpleadoFallido">Registro de empleado fallido</string>

    <string name="errorGeneral">Ups! Algo ha salido mal. Póngase en contacto con nosotros.</string>
    <string name="errorAccesoBD">Ups! Algo ha salido mal. Vuelva a intentarlo pasados unos minutos.</string>

    <string name="faltaNombreProyecto">Informe el nombre de proyecto</string>
    <string name="faltaJefeProyecto">Informe el empleado jefe</string>
    <string name="faltaDescripcion">Informe de la descripción del proyecto</string>
    <string name="noSeEncuentranJefes">No se ha encontrado ningún jefe de proyecto, debe registrarse al menos uno</string>
    <string name="noHayCambios">No se han producido cambios</string>

    <string name="faltaTarea">Informe el texto de la tarea</string>
    <!-- FIN Errores de aplicación -->

    <!-- Mensajes de aplicación -->
    <string name="altaEmpresaDone">Empresa dada de alta correctamente</string>
    <string name="altaEmpleadoDone">Empleado dado de alta correctamente</string>
    <string name="envioEmail">Se le ha enviado un email a su cuenta</string>

    <string-array name="estados_array">
        <item>Inicial</item>
        <item>Pendiente</item>
        <item>En proceso</item>
        <item>Pausada</item>
        <item>Terminada</item>
    </string-array>

    <string name="cuentaNoExisteDeshabilitada">Esta cuenta no existe o está deshabilitada</string>
    <string name="credencialesErroneas">Las credenciales son erroneas</string>

    <string name="empleadoAsignado">Empleado asignado</string>
    <string name="prioBaja">Baja</string>
    <string name="prioMedia">Media</string>
    <string name="prioAlta">Alta</string>
    <string name="prioridad">Prioridad</string>
    <string name="cambiar_datos_tarea">Cambiar datos de la tarea</string>
    <string name="alerta">Alerta!</string>
    <string name="noPuedesDesasignarTarea">No te puedes desasignar tareas!</string>
    <string name="modifTareaError">Se ha producido un error al modificar la tarea</string>


    <!-- FIN Mensajes de aplicación -->

</resources>