<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogos.CambiarDatosTareaDialog"
    android:theme="@style/Theme.Taskjects">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldNombreTareaCDTarea"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/tarea"
        app:startIconDrawable="@drawable/ic_task_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreTareaCDTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewPrioridadCDTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/prioridad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldNombreTareaCDTarea" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupPrioridadesCDTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrioridadCDTarea"
        app:singleLine="true"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPrioBajaCDTarea"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/prioBaja"
            android:textColor="@color/black"
            app:chipBackgroundColor="@color/chip_prioridad_baja" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPrioMediaCDTarea"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prioMedia"
            android:textColor="@color/black"
            app:chipBackgroundColor="@color/chip_prioridad_media" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPrioAltaCDTarea"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prioAlta"
            android:textColor="@color/black"
            app:chipBackgroundColor="@color/chip_prioridad_alta" />


    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>