<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentEmpleadoLogin"
    android:theme="@style/Theme.MaterialComponents.Light">

    <!-- Inicio TextInputLayout del usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldUsuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/usuario"
        app:startIconDrawable="@drawable/ic_empleado_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- TextInput con el usuario -->
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Fin TextInputLayout del usuario -->


    <!-- Inicio TextInputLayout de la contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldContrasenia"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/contrasenia"
        app:startIconDrawable="@drawable/ic_ojo_24dp"
        app:startIconCheckable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldUsuario">

        <!-- TextInput con la contraseña-->
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>
    <!-- Fin TextInputLayout de la contraseña -->


    <!-- TextView recuperacion de contraseña -->
    <TextView
        android:id="@+id/textViewRecuperarContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/recuperar_contrasenia"
        android:textColor="#64B5F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.799"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldContrasenia" />

    <!-- Boton de login -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/containedButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="@string/iniciar_sesion"
        style="@style/Widget.MaterialComponents.Button"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldContrasenia"
        />

    <!-- View que dibuja simplemente una linea de separacion -->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="#707070"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containedButton" />

    <!-- TextView pregunta no tienes cuenta-->
    <TextView
        android:id="@+id/textViewInfoRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:text="@string/no_tienes_cuenta"
        app:layout_constraintEnd_toStartOf="@+id/textViewRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <!-- TextView texto registro-->
    <TextView
        android:id="@+id/textViewRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="120dp"
        android:text="@string/registrate"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewInfoRegistro"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>